force-app/main/default/objects/Applied_Accounting_Code__c/Applied_Accounting_Code__c.object-meta.xml
<CustomObject>
    <description>Defines amounts collected on payments to violations that are applied to specific accounting codes. Records are created by trigger (define trigger and method later) when a payment is received against a liability.</description>
    <label>Applied Accounting Code</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Applied Accounting Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Accounting Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>