force-app/main/default/objects/Applied_Accounting_Code__c/fields/Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code__c</fullName>
    <inlineHelpText>Code to which the payment applies</inlineHelpText>
    <label>Accounting Code</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>Applied Accounting Codes</relationshipLabel>
    <relationshipName>Applied_Accounting_Codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>