force-app/main/default/objects/Applied_Accounting_Code__c/fields/Check_Count__c.field-meta.xml
<CustomField>
    <fullName>Check_Count__c</fullName>
    <description>This field will be populated by the liabilityPaymentMethods Apex Class, and may be totaled for the number of checks included on a Transmittal.</description>
    <label>Check Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>