force-app/main/default/objects/Applied_Accounting_Code__c/fields/Interest_Amt__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amt__c</fullName>
    <description>This field will allow interest to be summarized in its own column on  a report.</description>
    <formula>IF( Payment_Type__c = &quot;Interest&quot;, Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>