force-app/main/default/objects/Applied_Accounting_Code__c/fields/Liability_Payment__c.field-meta.xml
<CustomField>
    <fullName>Liability_Payment__c</fullName>
    <inlineHelpText>Payment to which the amount applies</inlineHelpText>
    <label>Liability Payment</label>
    <referenceTo>Liability_Payment__c</referenceTo>
    <relationshipLabel>Applied Accounting Codes</relationshipLabel>
    <relationshipName>Applied_Accounting_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>