force-app/main/default/objects/Applied_Accounting_Code__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>This field supports an enhancement to Collection Report: Add “Pmt Applied to Penalties” and “Pmt Applied to Interest” as separate columns to the Collections report.</description>
    <label>Payment Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>