force-app/main/default/objects/Applied_Accounting_Code__c/fields/Violation_Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Violation_Accounting_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by the liabilityPaymentMethods apex class upon AeAC record creation.</description>
    <label>Violation Accounting Code</label>
    <referenceTo>Violation_Accounting_Code__c</referenceTo>
    <relationshipLabel>Applied Accounting Codes</relationshipLabel>
    <relationshipName>Applied_Accounting_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>