force-app/main/default/objects/Applied_Accounting_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Liability_Payment__c</columns>
    <columns>Accounting_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>